--- a/index.ipynb
+++ b/index.ipynb
@@ -83,22 +83,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 6, 11, 16, 21]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "initial_i = 0\n",
     "ending_i = 4\n",
-    "terms = ["
+    "terms = []\n"
    ]
   },
   {
