--- a/index.ipynb
+++ b/index.ipynb
@@ -87,7 +87,8 @@
    "source": [
     "initial_i = 0\n",
     "ending_i = 4\n",
-    "terms = []\n"
+    "terms = []\n",
+    "for i in sequence"
    ]
   },
   {
