--- a/index.ipynb
+++ b/index.ipynb
@@ -88,7 +88,7 @@
     "initial_i = 0\n",
     "ending_i = 4\n",
     "terms = []\n",
-    "for i in sequence"
+    "for i in element"
    ]
   },
   {
