Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -88,7 +88,7 @@
     "initial_i = 0\n",
     "ending_i = 4\n",
     "terms = []\n",
-    "for i in element\n",
+    "for i in range(initial_i, )\n",
     "    current_element = "
    ]
   },
