Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -89,7 +89,7 @@
     "ending_i = 4\n",
     "terms = []\n",
     "for i in range(initial_i, ending_i)\n",
-    "    current_element = 5*initial_i "
+    "    current_element = 5*initial_i +1"
    ]
   },
   {
