Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -88,9 +88,7 @@
     "initial_i = 0\n",
     "ending_i = 4\n",
     "terms = []\n",
-    "for i in range(initial_i, ending_i)\n",
-    "    element = \n",
-    "    current_element = 5*initial_i + 1"
+    "for i in element"
    ]
   },
   {
