Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,9 @@
    "outputs": [],
    "source": [
     "initial_i = 0\n",
-    "ending_"
+    "ending_i = 4\n",
+    "\n",
+    "terms "
    ]
   },
   {
