--- a/index.ipynb
+++ b/index.ipynb
@@ -89,7 +89,7 @@
     "ending_i = 4\n",
     "\n",
     "terms = []\n",
-    "for i in range(initial_i, )"
+    "for i in range(initial_i, ending_i+1)\n"
    ]
   },
   {
