--- a/index.ipynb
+++ b/index.ipynb
@@ -89,7 +89,8 @@
     "ending_i = 4\n",
     "\n",
     "terms = []\n",
-    "for i in range(initial_i, ending_i+1)\n"
+    "for i in range(initial_i, ending_i+1)\n",
+    "    CURRE"
    ]
   },
   {
