--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,7 @@
     "\n",
     "terms = []\n",
     "for i in range(initial_i, ending_i+1)\n",
-    "    CURRE"
+    "    current_element = "
    ]
   },
   {
