--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,8 @@
     "\n",
     "terms = []\n",
     "for i in range(initial_i, ending_i+1)\n",
-    "    current_element = 5*(i) + 1"
+    "    current_element = 5*(i) + 1\n",
+    "    terms"
    ]
   },
   {
