Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -91,7 +91,8 @@
     "terms = []\n",
     "for i in range(initial_i, ending_i+1)\n",
     "    current_element = 5*(i) + 1\n",
-    "    terms.append(current_element)"
+    "    terms.append(current_element)\n",
+    "    return terms"
    ]
   },
   {
