--- a/index.ipynb
+++ b/index.ipynb
@@ -81,15 +81,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-4-83c60efffb08>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-83c60efffb08>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    return terms\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+     ]
+    }
+   ],
    "source": [
     "initial_i = 0\n",
     "ending_i = 4\n",
     "\n",
     "terms = []\n",
-    "for i in range(initial_i, ending_i+1)\n",
+    "for i in range(initial_i, ending_i+1):\n",
     "    current_element = 5*(i) + 1\n",
     "    terms.append(current_element)\n",
     "    return terms"
